Change static file structure

--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -22,7 +22,7 @@
     
         <!-- Base CSS --->
         {% load static %}
-        <link rel="stylesheet" href="{% static 'grams/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'styles.css' %}">
 
         {% block page_css %}{% endblock page_css %}
     
@@ -184,7 +184,7 @@
     
         <!-- local js -->
         {% load static %}
-        <script src="{% static 'grams/dropdown.js' %}"></script>
+        <script src="{% static 'dropdown.js' %}"></script>
         <!--<script src="../js/charts.js"></script>-->
     
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
