--- a/grams/templates/dashboard.html
+++ b/grams/templates/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block page_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'grams/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 {% endblock page_css %}
 
 {% block content %}
