Added assetBrands app

--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -43,7 +43,7 @@
                     </span>
                 </a>
                 <span class="topbar-title">
-                    <a href="dashboard.html">
+                    <a href="/home/">
                         GRAMS
                     </a>
     
@@ -52,7 +52,7 @@
                         <!-- start notifs -->
                         <div class="dropdown">
                             <a class="userbtn" id="dLabel" role="button" data-toggle="dropdown"
-                                data-target="#" href="/page.html">
+                                data-target="#" href="/home/">
                                 <i class="fas fa-bell"></i>
                             </a>
                             <div class="dropdown-menu notifications" role="menu" aria-labelledby="dLabel">
@@ -75,7 +75,7 @@
                                 <!-- start notif panel footer -->
                                 <div class="notification-footer">
                                     <span class="menu-title">
-                                        <a href="notifications.html">View all</a>
+                                        <a href="/home/">View all</a>
                                     </span>
                                 </div>
                                 <!-- end notif panel footer -->
@@ -126,8 +126,8 @@
                 <!-- start asset menu -->
                 <a href="#asset" class="dropdown-btn"><i class="fas fa-cubes sidecon"></i> Asset <i class="fas fa-angle-down"></i></a>
                 <div class="dropdown-container">
-                    <a href="assettable.html"><i class="fas fa-table incon"></i> Display All</a>
-                    <a href="addasset.html"><i class="fas fa-plus incon"></i> Add</a>
+                    <a href="/assets/"><i class="fas fa-table incon"></i> Display All</a>
+                    <a href="/assets/add/"><i class="fas fa-plus incon"></i> Add</a>
                     <a href="#" class="dropdown-btn"><i class="fas fa-th-large incon"></i> Categories <i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-container">
                         <a href="assetcategory.html" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
@@ -135,8 +135,8 @@
                     </div>
                     <a href="#" class="dropdown-btn"><i class="fas fa-tags incon"></i> Brands <i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-container">
-                        <a href="assetbrand.html" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                        <a href="addassetbrand.html" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        <a href="/assetbrands/" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                        <a href="/assetbrands/add/" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                     </div>
                 </div>
                 <!-- end asset menu -->
@@ -147,8 +147,8 @@
                     <a href="transfer.html"><i class="fas fa-people-carry incon"></i> Transfer</a>
                     <a href="dispose.html"><i class="far fa-trash-alt incon"></i> Dispose/Archive</a>
                     <a href="recover.html"><i class="fas fa-redo-alt incon"></i> Recover</a>
-                    <a href="queue.html"><i class="far fa-calendar-alt incon"></i> Queue</a>
-                    <a href="history.html"><i class="fas fa-history incon"></i> History</a>
+                    <a href="/transactions/"><i class="far fa-calendar-alt incon"></i> Queue</a>
+                    <a href="/transactions/history/"><i class="fas fa-history incon"></i> History</a>
                 </div>
                 <!-- end transactions menu -->
     
@@ -157,8 +157,8 @@
                     <div class="dropdown-container">
                         <a href="#"  class="dropdown-btn"><i class="fas fa-utensils incon"></i> Branches <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
-                            <a href="branches.html" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="addbranch.html" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            <a href="/branch/" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                            <a href="/branch/add/" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-users incon"></i> Users <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
@@ -167,8 +167,8 @@
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-wrench incon"></i> Vendors <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
-                            <a href="vendors.html" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="addvendor.html" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            <a href="/vendors/" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                            <a href="/vendors/add/" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                         </div>
                         <a href="generate.html"><i class="far fa-hdd incon"></i> Generate Backup</a>
                     </div>
