--- a/grams/templates/branches.html
+++ b/grams/templates/branches.html
@@ -32,62 +32,48 @@
                     <th>ID</th>
                     <th>NAME</th>
                     <th>LOCATION</th>
-                    <th>ACTIONS</th>
                 </tr>
             </thead>
             
             <tbody style="overflow-y:auto;">
                 <tr>
-                    <td>1</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>MOA</td>
+                    <td>Giligan's MOA</td>
+                    <td>Pasay, By the Bay?</td>
                 </tr>
 
                 <tr>
-                    <td>2</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>XYZ</td>
+                    <td>Giligan's XYZ</td>
+                    <td>Makati City</td>
                 </tr>
 
                 <tr>
-                    <td>3</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>SMN</td>
+                    <td>Giligan's SM North</td>
+                    <td>SM North</td>
                 </tr>
 
                 <tr>
-                    <td>4</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>SMS</td>
+                    <td>Giligan's South</td>
+                    <td>South Luzon</td>
                 </tr>
 
                 <tr>
-                    <td>5</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>DMD</td>
+                    <td>Giligan's DMD</td>
+                    <td>Mandaluyong City</td>
                 </tr>
 
                 <tr>
-                    <td>6</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>GGH</td>
+                    <td>Giligan's Greenhills</td>
+                    <td>Greenhills, San Juan</td>
                 </tr>
 
-                <tr>
-                    <td>7</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
             </tbody>
         </table>
       </div>
 </section>
-
 {% endblock content %}
