--- a/grams/templates/assetcategory.html
+++ b/grams/templates/assetcategory.html
@@ -31,50 +31,46 @@
                 <tr>
                     <th>ID</th>
                     <th>NAME</th>
-                    <th>ACTIONS</th>
                 </tr>
             </thead>
             
             <tbody>
             <tr>
-                <td>1</td>
-                <td></td>
-                <td></td>
+                <td>0001</td>
+                <td>Chairs</td>
             </tr>
 
             <tr>
-                <td>2</td>
-                <td></td>
-                <td></td>
+                <td>0002</td>
+                <td>Laptops</td>
             </tr>
 
             <tr>
-                <td>3</td>
-                <td></td>
-                <td></td>
+                <td>0003</td>
+                <td>Kitchen Equipment</td>
             </tr>
 
             <tr>
-                <td>4</td>
-                <td></td>
-                <td></td>
+                <td>0004</td>
+                <td>Office Equipment</td>
             </tr>
 
             <tr>
-                <td>5</td>
-                <td></td>
-                <td></td>
+                <td>0005</td>
+                <td>Computers</td>
             </tr>
 
             <tr>
-                <td>6</td>
-                <td></td>
-                <td></td>
+                <td>0006</td>
+                <td>Decoration</td>
+            </tr>
+
+            <tr>
+                <td>0007</td>
+                <td>Table</td>
             </tr>
             </tbody>
         </table>
       </div>
-      
 </section>
-
 {% endblock content %}
