--- a/grams/templates/assettable.html
+++ b/grams/templates/assettable.html
@@ -16,7 +16,7 @@
                 </div>
                 
                 <form class="form-inline" style="margin-bottom: 15px">
-                    <label for="dropdowns" class="mr-sm-2">Filter by: </label>
+                    <label for="dropdowns" class="mr-sm-2">Filter by: &nbsp;</label>
     
                     <div class="form-group">
                         <input class="form-check" type="checkbox">
@@ -91,88 +91,105 @@
                 
                 <tbody style="overflow-y:auto;">
                     <tr>
-                        <td>1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>987654321</td>
+                        <td>Mahogany Chair</td>
+                        <td>In Use</td>
+                        <td>Chair</td>
+                        <td>Mahogany</td>
+                        <td>XYZ</td>
                     </tr>
 
                     <tr>
-                        <td>2</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>123456789</td>
+                        <td>Cashier Laptop</td>
+                        <td>Defective</td>
+                        <td>Laptop</td>
+                        <td>Dell</td>
+                        <td>MOA</td>
                     </tr>
 
                     <tr>
-                        <td>3</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>112233445</td>
+                        <td>Spool of rope</td>
+                        <td>Storage</td>
+                        <td>Decoration</td>
+                        <td>Kolin</td>
+                        <td>GER</td>
                     </tr>
 
                     <tr>
-                        <td>4</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>43215678</td>
+                        <td>Freezer</td>
+                        <td>For Maintenance</td>
+                        <td>Kitchen Equipment</td>
+                        <td>Condura</td>
+                        <td>TYM</td>
                     </tr>
 
                     <tr>
-                        <td>5</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>43215679</td>
+                        <td>CPU</td>
+                        <td>For Maintenance</td>
+                        <td>Computer</td>
+                        <td>Samsung</td>
+                        <td>GGG</td>
                     </tr>
 
                     <tr>
-                        <td>6</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>43215698</td>
+                        <td>Office Chair</td>
+                        <td>For Maintenance</td>
+                        <td>Office Equipment</td>
+                        <td>Ikea</td>
+                        <td>GGG</td>
                     </tr>
 
                     <tr>
-                        <td>7</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>43215778</td>
+                        <td>Stainless Countertop</td>
+                        <td>For Maintenance</td>
+                        <td>Kitchen Equipment</td>
+                        <td>Ikea</td>
+                        <td>YXS</td>
                     </tr>
                     
                     <tr>
-                        <td>8</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>43215779</td>
+                        <td>Stove</td>
+                        <td>For Maintenance</td>
+                        <td>Kitchen Equipment</td>
+                        <td>Kolin</td>
+                        <td>UUU</td>
                     </tr>
                     
                     <tr>
-                        <td>9</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>12345779</td>
+                        <td>Anchor</td>
+                        <td>Storage</td>
+                        <td>Decoration</td>
+                        <td>Vintage</td>
+                        <td>JIN</td>
+                    </tr>
+
+                    <tr>
+                        <td>12543767</td>
+                        <td>Small Ship</td>
+                        <td>In Use</td>
+                        <td>Decoration</td>
+                        <td>Vintage</td>
+                        <td>JIN</td>
+                    </tr>
+
+                    <tr>
+                        <td>32588867</td>
+                        <td>Nets</td>
+                        <td>In Use</td>
+                        <td>Decoration</td>
+                        <td>Vintage</td>
+                        <td>DFG</td>
                     </tr>
                 </tbody>
             </table>
           </div>
-
 </section>
 {% endblock content %}
