--- a/grams/templates/editassetcategory.html
+++ b/grams/templates/editassetcategory.html
@@ -8,7 +8,7 @@
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>Edit Per Asset Brand</h2>
+        <h2>Edit Per Asset Category</h2>
     </div>
 
     <div class="row">
