--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -1,26 +1,22 @@
 
 <html>
     <head>
-        <!-- TITLE --->
         {% if title %}
             <title>GRAMS: {{ title }}</title>
         {% else %}
             <title>GRAMS</title>
         {% endif %}
     
-        <!-- BOOTSTRAP --->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous">
     
-        <!-- FONT AWESOME --->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" 
             integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" 
             crossorigin="anonymous">
     
-        <!-- Base CSS --->
         {% load static %}
         <link rel="stylesheet" href="{% static 'styles.css' %}">
 
@@ -29,9 +25,6 @@
     </head>
     
     <body>
-    <!---------------------------------------------------
-        START COPY
-    ----------------------------------------------------->
     
         <!-- START TOP BAR -->
         <div class="topbar">
@@ -126,17 +119,17 @@
                 <!-- start asset menu -->
                 <a href="#asset" class="dropdown-btn"><i class="fas fa-cubes sidecon"></i> Asset <i class="fas fa-angle-down"></i></a>
                 <div class="dropdown-container">
-                    <a href="/assets/"><i class="fas fa-table incon"></i> Display All</a>
-                    <a href="/assets/add/"><i class="fas fa-plus incon"></i> Add</a>
+                    <a href="{% url 'asset-table' %}"><i class="fas fa-table incon"></i> Display All</a>
+                    <a href="{% url 'asset-add' %}"><i class="fas fa-plus incon"></i> Add</a>
                     <a href="#" class="dropdown-btn"><i class="fas fa-th-large incon"></i> Categories <i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-container">
-                        <a href="/assetcategories/" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                        <a href="/assetcategories/add/" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        <a href="{% url 'asset-categories-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                        <a href="{% url 'asset-categories-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                     </div>
                     <a href="#" class="dropdown-btn"><i class="fas fa-tags incon"></i> Brands <i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-container">
-                        <a href="/assetbrands/" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                        <a href="/assetbrands/add/" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        <a href="{% url 'asset-brands-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                        <a href="{% url 'asset-brands-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                     </div>
                 </div>
                 <!-- end asset menu -->
@@ -147,8 +140,8 @@
                     <a href="transfer.html"><i class="fas fa-people-carry incon"></i> Transfer</a>
                     <a href="dispose.html"><i class="far fa-trash-alt incon"></i> Dispose/Archive</a>
                     <a href="recover.html"><i class="fas fa-redo-alt incon"></i> Recover</a>
-                    <a href="/transactions/"><i class="far fa-calendar-alt incon"></i> Queue</a>
-                    <a href="/transactions/history/"><i class="fas fa-history incon"></i> History</a>
+                    <a href="{% url 'transactions-table' %}"><i class="far fa-calendar-alt incon"></i> Queue</a>
+                    <a href="{% url 'transactions-history' %}"><i class="fas fa-history incon"></i> History</a>
                 </div>
                 <!-- end transactions menu -->
     
@@ -174,19 +167,12 @@
                     </div>
                 <!-- end manage menu -->
             </div>
-            <!-- END SIDE NAV -->
-    
-    <!---------------------------------------------------
-        END COPY
-    ----------------------------------------------------->
 
         {% block content %}{% endblock content %}
     
-        <!-- local js -->
         {% load static %}
         <script src="{% static 'dropdown.js' %}"></script>
-        <!--<script src="../js/charts.js"></script>-->
-    
+
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" 
             crossorigin="anonymous"></script>
