--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -150,8 +150,13 @@
                     <div class="dropdown-container">
                         <a href="#"  class="dropdown-btn"><i class="fas fa-utensils incon"></i> Branches <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
-                            <a href="/branch/" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="/branch/add/" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            <a href="{% url 'branch-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                            <a href="{% url 'branch-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                        </div>
+                        <a href="#"  class="dropdown-btn"><i class="fas fa-utensils incon"></i> Companies <i class="fas fa-angle-down"></i></a>
+                        <div class="dropdown-container">
+                            <a href="{% url 'company-table' %}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                            <a href="{% url 'company-add' %}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-users incon"></i> Users <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
@@ -160,8 +165,8 @@
                         </div>
                         <a href="#"  class="dropdown-btn"><i class="fas fa-wrench incon"></i> Vendors <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-container">
-                            <a href="/vendors/" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
-                            <a href="/vendors/add/" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
+                            <a href="{% url 'vendors-table'%}" style="margin-left: 20px;"><i class="fas fa-table incon"></i> Display All</a>
+                            <a href="{% url 'vendors-add'%}" style="margin-left: 20px;"><i class="fas fa-plus incon"></i> Add</a>
                         </div>
                         <a href="generate.html"><i class="far fa-hdd incon"></i> Generate Backup</a>
                     </div>
