--- a/grams/templates/assetbrandview.html
+++ b/grams/templates/assetbrandview.html
@@ -8,14 +8,14 @@
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>Per Asset Brand</h2>
+        <h2>{{ brands_view.name }}</h2>
     </div>
 
     
         <div class="row">
               <div class="col">
-                    <h5>ID: </h5>
-                    <h5>Name: </h5>
+                    <h5>ID: {{ brands_view.id }}</h5>
+                    <h5>Name: {{ brands_view.name }}</h5>
               </div>
         </div>
 
