--- a/grams/templates/companyview.html
+++ b/grams/templates/companyview.html
@@ -8,14 +8,14 @@
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>Per Company</h2>
+        <h2>{{ company_view.name }}</h2>
     </div>
 
     
         <div class="row">
               <div class="col">
-                    <h5>ID: </h5>
-                    <h5>Name: </h5>
+                    <h5>ID: {{ company_view.id }}</h5>
+                    <h5>Name: {{ company_view.name }}</h5>
               </div>
         </div>
 </section>
