--- a/grams/templates/branchview.html
+++ b/grams/templates/branchview.html
@@ -8,15 +8,15 @@
 {% block content %}
 <section id="main" class="content">
     <div class="titlepage">
-        <h2>Per Branch</h2>
+        <h2>{{ branch_view.name }}</h2>
     </div>
 
     
         <div class="row">
               <div class="col">
-                    <h5>ID: </h5>
-                    <h5>Name: </h5>
-                    <h5>Location Number: </h5>
+                    <h5>ID: {{ branch_view.id }}</h5>
+                    <h5>Name: {{ branch_view.name }}</h5>
+                    <h5>Location Number: {{ branch_view.location }}</h5>
               </div>
         </div>
 </section>
