--- a/grams/templates/addasset.html
+++ b/grams/templates/addasset.html
@@ -12,11 +12,13 @@
     </div>
 
     <div class="row">
-        <div class="col-sm tablebox-container">
+        <div class="form-control tablebox-container">
             <form method="POST" action="">
                 {% csrf_token %}
+                
                 {{ form.as_p }}
                 <input type="submit" value="Save">
+                <input type="reset" value="Reset">
             </form>
         </div>
     </div>
