--- a/grams/templates/dashboard.html
+++ b/grams/templates/dashboard.html
@@ -16,7 +16,7 @@
 
                 <div class="col-sm reportbox neutral">
                     <a href="assettable.html"><i class="fas fa-info-circle boxcon"></i></a>
-                    <h2>???</h2>
+                    <h2>{{ asset_count }}</h2>
                     <span class="reportbox-caption">total recorded assets.</span>
                 </div>
 
@@ -34,7 +34,7 @@
 
                 <div class="col-sm reportbox misc">
                     <a href="history.html"><i class="fas fa-info-circle boxcon"></i></a>
-                    <h2>???</h2>
+                    <h2>{{ recently_added }}</h2>
                     <span class="reportbox-caption">recently added assets.</span>
                 </div>
 
