--- a/grams/templates/assettable.html
+++ b/grams/templates/assettable.html
@@ -80,7 +80,7 @@
                     </form>
         
         <div style="overflow-x:auto;"> 
-                <table class="table table-striped" id="myTable"> 
+                <table class="table table-striped" id="myTable" style="font-size: 1em;"> 
                     <thead>
                         <tr>
                             <th>ID</th>
