--- a/grams/templates/base.html
+++ b/grams/templates/base.html
@@ -137,6 +137,7 @@
                 <!-- start transactions menu -->
                 <a href="#transactions" class="dropdown-btn"><i class="fas fa-random sidecon"></i> Transactions <i class="fas fa-angle-down"></i></a>
                 <div class="dropdown-container">
+                    <a href="{% url 'schedule-maintenance' %}"><i class="fas fa-people-carry incon"></i> Maintenance</a>
                     <a href="transfer.html"><i class="fas fa-people-carry incon"></i> Transfer</a>
                     <a href="dispose.html"><i class="far fa-trash-alt incon"></i> Dispose/Archive</a>
                     <a href="recover.html"><i class="fas fa-redo-alt incon"></i> Recover</a>
